--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,7 @@ body{
 }
 
 .header1{
-    background-image:url(img/top_boos_pc.webp);
+    background-image:url(https://raw.githubusercontent.com/hiroyukie/corporatedemo1/main/top_boos_pc.webp);
     padding-top:450px;
     background-size:cover;
     padding-bottom: 50px;
@@ -46,7 +46,7 @@ header a{
 }
 
 .section1{
-    background-image:url(img/top_banner_boos.webp);
+    background-image:url(https://raw.githubusercontent.com/hiroyukie/corporatedemo1/main/top_banner_boos.webp);
     max-width: 90%;
     margin: 0 auto;
     text-align:center;
@@ -153,7 +153,7 @@ header a{
 }
 
 .section4{
-    background-image:url(img/top3.png);
+    background-image:url(https://github.com/hiroyukie/corporatedemo1/blob/main/top3.png?raw=true);
     padding-top:100px;
     background-size:cover;
     padding-bottom: 100px;
@@ -685,7 +685,7 @@ header a{
 }
 
 .section12{
-    background-image:url(img/top_41d9e98b-e4f9-4af7-ab06-5f080a9cfe85.png);
+    background-image:url(https://github.com/hiroyukie/corporatedemo1/blob/main/top_41d9e98b-e4f9-4af7-ab06-5f080a9cfe85.png?raw=true);
     text-align:center;
     padding-top:200px;
     background-size:cover;
